--- a/app/src/ui/App.css
+++ b/app/src/ui/App.css
@@ -140,3 +140,26 @@ textarea::-webkit-scrollbar-thumb {
   background: rgba(255, 255, 255, 0.1);
   border-radius: 10px;
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.hide-scrollbar-entrance {
+  animation: entrance-no-scroll 2.5s step-start forwards;
+}
+
+@keyframes entrance-no-scroll {
+  from {
+    overflow: hidden;
+  }
+
+  to {
+    overflow: auto;
+  }
+}
