Removed UseLess themes from the app!

--- a/app/src/electron/themes/fresh/index.css
+++ b/app/src/electron/themes/fresh/index.css
@@ -1,4 +1,4 @@
-.theme-calude {
+.theme-fresh {
     --background: oklch(0.9818 0.0054 95.0986);
     --foreground: oklch(0.3438 0.0269 95.7226);
     --card: oklch(0.9818 0.0054 95.0986);
@@ -53,7 +53,7 @@
     --spacing: 0.25rem;
 }
 
-.theme-calude.dark {
+.theme-fresh.dark {
     --background: oklch(0.2679 0.0036 106.6427);
     --foreground: oklch(0.8074 0.0142 93.0137);
     --card: oklch(0.2679 0.0036 106.6427);
