--- a/app/src/electron/themes/smooth/index.css
+++ b/app/src/electron/themes/smooth/index.css
@@ -1,4 +1,4 @@
-.theme-clay {
+.theme-smooth {
     --background: oklch(0.9232 0.0026 48.7171);
     --foreground: oklch(0.2795 0.0368 260.0310);
     --card: oklch(0.9699 0.0013 106.4238);
@@ -53,7 +53,7 @@
     --spacing: 0.25rem;
 }
 
-.theme-clay.dark {
+.theme-smooth.dark {
     --background: oklch(0.2244 0.0074 67.4370);
     --foreground: oklch(0.9288 0.0126 255.5078);
     --card: oklch(0.2801 0.0080 59.3379);
