--- a/app/src/electron/themes/coffee/index.css
+++ b/app/src/electron/themes/coffee/index.css
@@ -1,4 +1,4 @@
-.theme-caffeine {
+.theme-coffee {
     --background: oklch(0.9821 0 0);
     --foreground: oklch(0.2435 0 0);
     --card: oklch(0.9911 0 0);
@@ -53,7 +53,7 @@
     --spacing: 0.25rem;
 }
 
-.theme-caffeine.dark {
+.theme-coffee.dark {
     --background: oklch(0.1776 0 0);
     --foreground: oklch(0.9491 0 0);
     --card: oklch(0.2134 0 0);
