--- a/app/src/electron/themes/nerd/index.css
+++ b/app/src/electron/themes/nerd/index.css
@@ -1,4 +1,4 @@
-.theme-darkmatter {
+.theme-nerd {
     --background: oklch(1.0000 0 0);
     --foreground: oklch(0.2101 0.0318 264.6645);
     --card: oklch(1.0000 0 0);
@@ -53,7 +53,7 @@
     --spacing: 0.25rem;
 }
 
-.theme-darkmatter.dark {
+.theme-nerd.dark {
     --background: oklch(0.1797 0.0043 308.1928);
     --foreground: oklch(0.8109 0 0);
     --card: oklch(0.1822 0 0);
